Replace NetCoreWebApps/Web with ServiceStack/Web

--- a/docs/_releases/v4.5.14.md
+++ b/docs/_releases/v4.5.14.md
@@ -138,7 +138,7 @@ Web Apps leverages Templates to develop entire content-rich, data-driven website
 
 Not having to write any C# code or perform any app builds dramatically reduces the cognitive overhead and conceptual knowledge required for development where the only thing front-end Web developers need to know is [Template's syntax](http://templates.servicestack.net/docs/syntax) and what [filters are available](http://templates.servicestack.net/docs/filters-reference) to call. Because of Template's high-fidelity with JavaScript, developing a Website with Templates will be instantly familiar to JavaScript developers despite calling and binding directly to .NET APIs behind the scenes.
 
-All complexity with C#, .NET, namespaces, references, .dlls, strong naming, packages, MVC, Razor, build tools, IDE environments, etc has been eliminated leaving all Web Developers needing to do is run a cross-platform [web/app.dll](https://github.com/NetCoreWebApps/Web) .NET Core 2.0 executable and configure a simple [web.settings](https://github.com/NetCoreTemplates/bare-webapp/blob/master/app.settings) text file to specify which website folder to use, which ServiceStack features to enable, which db or redis providers to connect to, etc. Not needing to build also greatly simplifies deployments where multiple websites can be deployed with a [single rsync](https://github.com/ServiceStack/dotnet-app/blob/master/src/WebApp/run.deploy.apps.sh) or xcopy command or if deploying your App in a Docker Container, you just need to [copy your website files](https://github.com/NetCoreWebApps/Rockwind.Aws/blob/master/Dockerfile), or just the `web.settings` if you're using an S3 or Azure Virtual File System.
+All complexity with C#, .NET, namespaces, references, .dlls, strong naming, packages, MVC, Razor, build tools, IDE environments, etc has been eliminated leaving all Web Developers needing to do is run a cross-platform [web/app.dll](https://github.com/ServiceStack/Web) .NET Core 2.0 executable and configure a simple [web.settings](https://github.com/NetCoreTemplates/bare-webapp/blob/master/app.settings) text file to specify which website folder to use, which ServiceStack features to enable, which db or redis providers to connect to, etc. Not needing to build also greatly simplifies deployments where multiple websites can be deployed with a [single rsync](https://github.com/ServiceStack/dotnet-app/blob/master/src/WebApp/run.deploy.apps.sh) or xcopy command or if deploying your App in a Docker Container, you just need to [copy your website files](https://github.com/NetCoreWebApps/Rockwind.Aws/blob/master/Dockerfile), or just the `web.settings` if you're using an S3 or Azure Virtual File System.
 
 ### Rapid Development Workflow
 
@@ -146,11 +146,11 @@ The iterative development experience is also unparalleled for a .NET App, no com
 
 ### Pure Cloud Apps
 
-Web Apps also enable the development of [Pure Cloud Apps](http://templates.servicestack.net/docs/web-apps#pure-cloud-apps) where the same Web App can be developed and run entirely on **AWS S3 and RDS** or **Azure Blob Storage and SQL Server** by just changing the `web.settings` that's deployed with the pre-compiled [Web App Binary](https://github.com/NetCoreWebApps/Web).
+Web Apps also enable the development of [Pure Cloud Apps](http://templates.servicestack.net/docs/web-apps#pure-cloud-apps) where the same Web App can be developed and run entirely on **AWS S3 and RDS** or **Azure Blob Storage and SQL Server** by just changing the `web.settings` that's deployed with the pre-compiled [Web App Binary](https://github.com/ServiceStack/Web).
 
 ## Example Web Apps 
 
-We've developed a number of Web Apps to illustrate the various features available and to showcase its strengths and the different kind of Web Apps that can easily be developed with it. The source code for each app is maintained in [NetCoreWebApps](https://github.com/NetCoreWebApps) and each Web App runs the same [pre-compiled web/app.dll binary](https://github.com/NetCoreWebApps/Web).
+We've developed a number of Web Apps to illustrate the various features available and to showcase its strengths and the different kind of Web Apps that can easily be developed with it. The source code for each app is maintained in [NetCoreWebApps](https://github.com/NetCoreWebApps) and each Web App runs the same [pre-compiled web/app.dll binary](https://github.com/ServiceStack/Web).
 
 ### Bare Web App
 
@@ -350,7 +350,7 @@ The [/support/northwind-data](https://github.com/ServiceStack/dotnet-app/tree/ma
 #### [web.azure.settings](https://github.com/ServiceStack/dotnet-app/blob/master/src/apps/rockwind/web.azure.settings)
 
 The example Azure configuration is also configured to use a different Virtual File System where instead of sourcing Web App files from the filesystem they're sourced from an [Azure Blob Container](https://docs.microsoft.com/en-us/azure/storage/blobs/storage-dotnet-how-to-use-blobs).
-In this case we're not using any files from the App so we don't need to set a `contentRoot` or `webRoot` path. This also means for deployment we're just deploying the [WebApp](https://github.com/NetCoreWebApps/Web) binary along with [web.settings](https://github.com/ServiceStack/dotnet-app/blob/master/src/apps/rockwind/web.azure.settings) since both Web App files and database are sourced remotely from managed Azure services.
+In this case we're not using any files from the App so we don't need to set a `contentRoot` or `webRoot` path. This also means for deployment we're just deploying the [WebApp](https://github.com/ServiceStack/Web) binary along with [web.settings](https://github.com/ServiceStack/dotnet-app/blob/master/src/apps/rockwind/web.azure.settings) since both Web App files and database are sourced remotely from managed Azure services.
 
 #### Upload Rockwind files to your Azure Blob Storage Container
 
@@ -629,7 +629,7 @@ After the back-end has been implemented we can build and copy the compiled **Cha
 
 ### Simplified Web App Deployments
 
-Not having to build projects also greatly simplifies deployments as it just becomes an exercise of deploying your Web App's static files, `web.settings` and the pre-compiled [Web App binary](https://github.com/NetCoreWebApps/Web). We're maintaining step-by-step guides for the most popular deployment methods in [templates.servicestack.net/docs/deploying-web-apps](http://templates.servicestack.net/docs/deploying-web-apps) which we'll continue adding to in future. 
+Not having to build projects also greatly simplifies deployments as it just becomes an exercise of deploying your Web App's static files, `web.settings` and the pre-compiled [Web App binary](https://github.com/ServiceStack/Web). We're maintaining step-by-step guides for the most popular deployment methods in [templates.servicestack.net/docs/deploying-web-apps](http://templates.servicestack.net/docs/deploying-web-apps) which we'll continue adding to in future. 
 
 To give you an idea of how easy deployments are, after a [one-time setup of supervisor and nginx configuration for each App](http://templates.servicestack.net/docs/deploying-web-apps#setup-supervisor) we deploy all Web Apps above (excl AWS and Azure Cloud Apps which are deployed to AWS/Azure using Docker) in seconds by running [this script](https://github.com/ServiceStack/dotnet-app/blob/master/src/WebApp/run.deploy.apps.sh) below:
 
