--- a/docs/_releases/v5.0.0.md
+++ b/docs/_releases/v5.0.0.md
@@ -871,7 +871,7 @@ The smaller footprint required by the `aspnetcore` runtime reduced the footprint
 
 ### ServiceStack WebApps Updated
 
-Likewise all [.NET Core ServiceStack WebApps](https://github.com/NetCoreWebApps) including the pre-built [/web](https://github.com/NetCoreWebApps/Web) binaries have been updated to use ServiceStack v5.
+Likewise all [.NET Core ServiceStack WebApps](https://github.com/NetCoreWebApps) including the pre-built [/web](https://github.com/ServiceStack/Web) binaries have been updated to use ServiceStack v5.
 
 Changes from the previous version includes switching to use the default `WebHost.CreateDefaultBuilder()` builder to bootstrap WebApp's letting you use `ASPNETCORE_URLS` to specify which URL and port to bind on, simplifying deployment configurations.
 
